2012-02-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* DELPHI_1996_S3430090 and ALEPH_1996_S3486095:
	fix rapidity vs {Thrust,Sphericity}-axis.

2012-02-14  Andy Buckley  <andy.buckley@cern.ch>

	* bin/compare-histos: Don't attempt to remove bins from MC histos
	where they aren't found in the ref file, if the ref file is not
	expt data, or if the new --no-rmgapbins arg is given.

	* bin/rivet: Remove the conversion of requested analysis names to
	upper-case: mixed-case analysis names will now work.

2012-02-14  Frank Siegert  <frank.siegert@cern.ch>

	* Bugfixes and improvements for MC_TTBAR:
	  - Avoid assert failure with logspace starting at 0.0
	  - Ignore charged lepton in jet finding (otherwise jet multi is always
	    +1).
	  - Add some dR/deta/dphi distributions as noted in TODO
	  - Change pT plots to logspace as well (to avoid low-stat high pT bins)

2012-02-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* rivet-mkhtml -c option now has the semantics of a .plot
	file. The contents are appended to the dat output by
	compare-histos.

2012-02-09  David Grellscheid <david.grellscheid@durham.ac.uk>

	* Fixed broken UnstableFS behaviour

2012-01-25 Frank Siegert  <frank.siegert@cern.ch>

	* Improvements in make-plots:
          - Add PlotTickLabels and RatioPlotTickLabels options (cf.
	    make-plots.txt)
          - Make ErrorBars and ErrorBands non-exclusive (and change
	    their order, such that Bars are on top of Bands)

2012-01-25 Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Add ATLAS diffractive gap analysis

2012-01-23  Andy Buckley  <andy.buckley@cern.ch>

	* bin/rivet: When using --list-analyses, the analysis summary is
	now printed out when log level is <= INFO, rather than < INFO.
	The effect on command line behaviour is that useful identifying
	info is now printed by default when using --list-analyses, rather
	than requiring --list-analyses -v. To get the old behaviour,
	e.g. if using the output of rivet --list-analyses for scripting,