@@ -1,0 +1,44 @@
+# BEGIN PLOT /MC_GENERIC/EtaK
+Title=Pseudorapidity distribution of kaon multiplicity
+XLabel=$\eta$
+YLabel=$1/\sigma_K \; \mathrm{d}\sigma_K/\mathrm{d}\eta$
+LogY=0
+LegendXPos=0.3
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/EtaLambda
+Title=Pseudorapidity distribution of $\Lambda$ multiplicity
+XLabel=$\eta$
+YLabel=$1/\sigma_\Lambda \; \mathrm{d}\sigma_\Lambda/\mathrm{d}\eta$
+LogY=0
+LegendXPos=0.3
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/EtaPi
+Title=Pseudorapidity distribution of pion multiplicity
+XLabel=$\eta$
+YLabel=$1/\sigma_\pi \; \mathrm{d}\sigma_\pi/\mathrm{d}\eta$
+LogY=0
+LegendXPos=0.3
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/Mults.*PIDs
+XLabel=$|\text{PID}|$
+YLabel=$\langle N_\text{PID} \rangle$
+LogY=1
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/MultsDecayedPIDs
+Title=Average per-event multiplicity of decayed particle IDs
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/MultsStablePIDs
+Title=Average per-event multiplicity of stable particle IDs
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/MultsAllPIDs
+Title=Average per-event multiplicity of \emph{all} (unphysical) particle IDs
+# END PLOT
