@@ -1,46 +1,46 @@
-# BEGIN PLOT /MC_LEADINGJETS/trans-nchg
+# BEGIN PLOT /MC_LEADJETUE/trans-nchg
 Title=Transverse region charged particle density
 XLabel=Leading jet $p_\perp$ / GeV
 YLabel=$\mathrm{d}{N_\text{ch}}/\mathrm{d}{\phi}$
 LogY=0
 # END PLOT
 
-# BEGIN PLOT /MC_LEADINGJETS/trans-maxnchg
+# BEGIN PLOT /MC_LEADJETUE/trans-maxnchg
 Title=TransMAX region charged particle density
 XLabel=Leading jet $p_\perp$ / GeV
 YLabel=$\mathrm{d}{N_\text{ch}}/\mathrm{d}{\phi}$
 LogY=0
 # END PLOT
 
-# BEGIN PLOT /MC_LEADINGJETS/trans-minnchg
+# BEGIN PLOT /MC_LEADJETUE/trans-minnchg
 Title=TransMIN region charged particle density
 XLabel=Leading jet $p_\perp$ / GeV
 YLabel=$\mathrm{d}{N_\text{ch}}/\mathrm{d}{\phi}$
 LogY=0
 # END PLOT
 
-# BEGIN PLOT /MC_LEADINGJETS/trans-ptsum
+# BEGIN PLOT /MC_LEADJETUE/trans-ptsum
 Title=Transverse region charged pT sum density
 XLabel=Leading jet $p_\perp$ / GeV
 YLabel=$\mathrm{d}{\sum p_\perp^\text{sum}}/\mathrm{d}{\phi}$
 LogY=0
 # END PLOT
 
-# BEGIN PLOT /MC_LEADINGJETS/trans-maxptsum
+# BEGIN PLOT /MC_LEADJETUE/trans-maxptsum
 Title=TransMAX region charged pT sum density
 XLabel=Leading jet $p_\perp$ / GeV
 YLabel=$\mathrm{d}{\sum p_\perp^\text{sum}}/\mathrm{d}{\phi}$
 LogY=0
 # END PLOT
 
-# BEGIN PLOT /MC_LEADINGJETS/trans-minptsum
+# BEGIN PLOT /MC_LEADJETUE/trans-minptsum
 Title=TransMIN region charged pT sum density
 XLabel=Leading jet $p_\perp$ / GeV
 YLabel=$\mathrm{d}{\sum p_\perp^\text{sum}}/\mathrm{d}{\phi}$
 LogY=0
 # END PLOT
 
-# BEGIN PLOT /MC_LEADINGJETS/trans-ptavg
+# BEGIN PLOT /MC_LEADJETUE/trans-ptavg
 Title=Transverse region charged pT average
 XLabel=Leading jet $p_\perp$ / GeV
 YLabel=$\langle p_\perp \rangle$
