@@ -1,0 +1,40 @@
+# BEGIN PLOT /MC_PDFS/PdfX
+Title=PDF sampling $x$ value distribution
+XLabel=$x$
+YLabel=$1/N_\text{evt} \  \mathrm{d}N_\text{evt}/\mathrm{d}x$
+LogX=1
+LogY=1
+FullRange=1
+LegendXPos=0.1
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_PDFS/PdfXmin
+Title=PDF sampling $x_\text{min}$ value distribution
+XLabel=$x_\text{min}$
+# END PLOT
+
+# BEGIN PLOT /MC_PDFS/PdfXmax
+Title=PDF sampling $x_\text{max}$ value distribution
+XLabel=$x_\text{max}$
+LegendXPos=0.3
+XMin=0.00005
+# END PLOT
+
+# BEGIN PLOT /MC_PDFS/PdfQ
+Title=PDF sampling $Q$ value distribution
+XLabel=$Q$
+YLabel=$1/N_\text{evt} \  \mathrm{d}N_\text{evt}/\mathrm{d}Q$
+LogX=0
+LogY=1
+FullRange=1
+LegendYPos=0.9
+# END PLOT
+
+# # BEGIN PLOT /MC_PDFS/PdfXQ
+# Title=PDF sampling $x, Q$ value distribution
+# XLabel=$x$
+# YLabel=$Q$
+# LogX=0
+# LogY=0
+# # END PLOT
